--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/core": "^11.1.0",
     "@nestjs/microservices": "^11.1.0",
     "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.8",
     "npm-check-updates": "^18.0.1",
+    "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "typeorm": "^0.3.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
